[Mac] Zoom Bubble Autoclosing Fix

With the new MD style the zoom bubble should autoclose, even if the
zoom decoration is pressed. Since the bubble isn't actually pointing
to the decoration, it should not stay opened, even when the the
decoration is pressed.

BUG=682168

Review-Url: https://codereview.chromium.org/2652893007
Cr-Commit-Position: refs/heads/master@{#446378}

Former-commit-id: ce00d1fcc3a2779d4db9771ca35513a416de9f9d