chrome/browser/ui/cocoa/location_bar/zoom_decoration.mm
@@ -144,7 +144,7 @@ bool ZoomDecoration::OnMousePressed(NSRect frame, NSPoint location) {
   if (bubble_)
     CloseBubble();
   else
-    ShowBubble(NO);
+    ShowBubble(YES);
   return true;
 }
 
